--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "red_tetrisboilerplate",
+  "name": "red_tetris",
   "version": "0.0.1",
-  "author": "redpelicans",
+  "author": "rbarbazz, vparis",
+  "repository": "https://github.com/rbarbazz/red_tetris",
   "license": "MIT",
   "scripts": {
     "eslint": "eslint src",
@@ -13,36 +14,38 @@
     "coverage": "NODE_ENV=test nyc --include src --all -r text -r lcov -r text --require babel-core/register mocha "
   },
   "dependencies": {
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.0.1",
-    "socket.io": "^1.4.6"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.7.7",
-    "babel-core": "^6.7.7",
-    "babel-eslint": "^6.1.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-__coverage__": "^0.111111.1",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-watch": "^2.0.2",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
-    "chai-equal-jsx": "^1.0.9",
-    "eslint": "^2.13.1",
-    "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-react": "^5.2.2",
-    "mocha": "^2.4.5",
-    "nyc": "^6.4.4",
-    "webpack": "^1.13.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "@babel/core": "^7.5.5",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-__coverage__": "^11.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-watch": "^7.0.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^6.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-react": "^7.14.3",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1",
+    "preact": "^8.4.2",
+    "preact-jsx-chai": "^2.3.2",
+    "react-test-renderer": "^16.8.6",
+    "webpack": "^4.39.0",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-dev-server": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "nyc": {
     "exclude": [
