--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "coverage": "NODE_ENV=test nyc --include src --all -r text -r lcov -r text --require @babel/register mocha "
   },
   "dependencies": {
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
@@ -33,6 +34,7 @@
     "babel-watch": "^7.0.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "css-loader": "^3.1.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-babel": "^5.3.0",
@@ -44,6 +46,7 @@
     "preact": "^8.4.2",
     "preact-jsx-chai": "^2.3.2",
     "react-test-renderer": "^16.8.6",
+    "style-loader": "^0.23.1",
     "webpack": "^4.39.0",
     "webpack-cli": "^3.3.6",
     "webpack-dev-middleware": "^3.7.0",
