--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
     "react-test-renderer": "^16.8.6",
+    "sinon": "^7.4.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.39.0",
     "webpack-cli": "^3.3.6",
