--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "dependencies": {
     "debug": "^4.1.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
@@ -35,10 +35,10 @@
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-watch": "^7.0.0",
     "chai": "^4.2.0",
-    "css-loader": "^3.1.0",
+    "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^5.3.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
@@ -47,13 +47,14 @@
     "jsdom": "^15.1.1",
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
-    "react-test-renderer": "^16.8.6",
+    "react-test-renderer": "^16.9.0",
+    "redux-mock-store": "^1.5.3",
     "sinon": "^7.4.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.39.0",
-    "webpack-cli": "^3.3.6",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
     "webpack-dev-middleware": "^3.7.0",
-    "webpack-dev-server": "^3.7.2",
+    "webpack-dev-server": "^3.8.0",
     "webpack-hot-middleware": "^2.25.0"
   },
   "babel": {
