--- a/.eslintrc
+++ b/.eslintrc
@@ -8,5 +8,7 @@
 		"no-param-reassign": "off", // Don't detect get/set
 		"no-underscore-dangle": "off", // Private members
 		"no-plusplus" : "off", // ++i or i++
+		"no-restricted-syntax" : "off",
+		"guard-for-in" : "off",
 	},
 }
