--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,6 @@
 		"no-underscore-dangle": "off", // Private members
 		"no-plusplus" : "off", // ++i or i++
 		"no-restricted-syntax" : "off",
-		"guard-for-in" : "off",
-	},
+		"guard-for-in" : "off"
+	}
 }
